--- a/app/src/main/res/layout/fragment_task_add.xml
+++ b/app/src/main/res/layout/fragment_task_add.xml
@@ -32,6 +32,7 @@
         android:id="@+id/task_tab_layout_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         app:tabIndicatorFullWidth="false"
         app:tabIndicatorColor="@color/count_down_color"
         app:layout_constraintTop_toTopOf="parent"
