--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             app:tabMode="fixed"
             app:tabGravity="fill"
+            app:tabTextColor="@color/white"
             android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,6 +26,7 @@
             android:id="@+id/settings_viewpager2_id"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_margin="20dp"
             app:layout_constraintTop_toBottomOf="@id/settings_tab_layout_id"
             app:layout_constraintBottom_toBottomOf="parent" />
 
