--- a/app/src/main/res/layout/fragment_settings_signup_account.xml
+++ b/app/src/main/res/layout/fragment_settings_signup_account.xml
@@ -106,7 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password_input"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:textSize="16sp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -123,6 +123,7 @@
 
     </LinearLayout>
 
+    <!-- Confirm password input -->
     <LinearLayout
         android:id="@+id/confirm_password_input_layout_id"
         android:layout_width="match_parent"
