--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,13 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="Widget.App.Spinner" parent="Widget.AppCompat.TextView.SpinnerItem">
+        <item name="android:popupBackground">@drawable/background_gradient_card</item>
+        <item name="android:dropDownVerticalOffset">48dp</item>
+        <item name="android:dropDownSelector">@drawable/background_dim_curved_purple</item>
+        <item name="android:dropDownWidth">wrap_content</item>
+        <item name="itemTextColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
