--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowNoTitle">true</item>
     </style>
+
+    <style name="Widget.App.Spinner" parent="Widget.AppCompat.TextView.SpinnerItem">
+        <item name="android:popupBackground">@drawable/background_gradient_card</item>
+        <item name="android:dropDownVerticalOffset">48dp</item>
+        <item name="android:dropDownSelector">@drawable/background_dim_curved_purple</item>
+        <item name="android:dropDownWidth">wrap_content</item>
+    </style>
+
 </resources>
