--- a/app/src/main/res/layout/fragment_settings_timer.xml
+++ b/app/src/main/res/layout/fragment_settings_timer.xml
@@ -1,76 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:padding="16dp"
+    <data>
+        <variable
+            name="settingsVM"
+            type="com.example.pomodoro_timer.viewmodels.SettingsViewModel" />
+    </data>
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:text="Pomodoro"
-            android:textSize="16sp"
-            android:layout_width="200dp"
-            android:layout_height="30dp"/>
-        <EditText
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="25:00"
-            android:inputType="time" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:text="Short break"
-            android:textSize="16sp"
-            android:layout_marginTop="8dp"
-            android:layout_width="200dp"
-            android:layout_height="30dp"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="05:00" />
+            <!-- Pomodoro timer picker -->
+            <LinearLayout
+                android:id="@+id/pomodoro_time_picker_layout_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/background_dim_curved_purple2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:text="Long break"
-            android:textSize="16sp"
-            android:layout_marginTop="8dp"
-            android:layout_width="200dp"
-            android:layout_height="30dp"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="15:00" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pomodoro"
+                    android:textSize="24sp"
+                    />
 
-        <TextView
-            android:text="Long break interval"
-            android:layout_marginTop="16dp"
-            android:layout_width="200dp"
-            android:layout_height="30dp"/>
-        <EditText
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:inputType="number"
-            android:text="4" />
+                <LinearLayout
+                    android:id="@+id/pomodoro_minutes_seconds_picker_layout_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background_curved_white"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/pomodoro_time_display_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="25:00"
+                        android:textSize="20sp"
+                        android:padding="10dp"
+                        android:textAlignment="center"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:background="@drawable/background_curved_white" />
 
-        <TextView
-            android:text="Auto Start Pomodoro"
-            android:layout_marginTop="16dp"
-            android:layout_width="200dp"
-            android:layout_height="30dp"/>
-        <Switch
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
+                </LinearLayout>
+            </LinearLayout>
 
-        <TextView
-            android:text="Auto Start Breaks"
-            android:layout_marginTop="8dp"
-            android:layout_width="200dp"
-            android:layout_height="30dp"/>
-        <Switch
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
 
-    </LinearLayout>
-</ScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+</layout>
+
