UI: settings done

--- a/app/src/main/res/layout/dialog_pomodoro_timer_picker.xml
+++ b/app/src/main/res/layout/dialog_pomodoro_timer_picker.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_curved_white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -21,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=":"
+            android:text="@string/colon_text"
             android:textSize="24sp"
             android:layout_marginHorizontal="8dp" />
 
