--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
             app:navGraph="@navigation/nav_graph"
             tools:layout="@layout/fragment_timer"
             app:layout_constraintTop_toBottomOf="@+id/guideline1"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toTopOf="@+id/bottom_nav"/>
 
         <ImageButton
             android:id="@+id/add_task_category_btn_id"
